# CryptologyExperiment

./: .gitignore  README.md
aes/: README.md  aes128.c  aes128.h  aes128_ni.c  aes128_ni_bench.c  aes128_ni_vaes.c  aes128_ni_vaes_bench.c  aes128_vectors_test.c
aes/tf_psa_crypto_bench/: CMakeLists.txt  aes_ecb_bench.c
sm4/: README.md  _dbg.c  gen_bs_sbox.py  gen_bs_sbox_avx2.py  gen_tables.py  sm4.c  sm4.h  sm4_bench.c  sm4_bitslice.c  sm4_bitslice.h  sm4_bitslice_avx2.c  sm4_bitslice_avx2.h  sm4_bitslice_avx2_bench.c  sm4_bitslice_avx2_test.c  sm4_bitslice_bench.c  sm4_bitslice_test.c  sm4_bs_sbox.h  sm4_bs_sbox_avx2.h  sm4_packtest.c  sm4_tables.c  sm4_test.c
